rollback should not abort single phased index builds

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.3
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2020-01-27
    • 13
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In SERVER-39484, to support rolling back two phased index builds, we started aborting index builds in IndexBuildsCoordinator::onRollback(). Unfortunately, this has the undesirable side effect of failing single phased index builds prematurely, leading to tests crashing in our CI system. To retain the original behavior for single phased index builds introduced in SERVER-30818, we should allow single phased index builds to run to completion.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: