SERVER-45174 do not abort single phased index builds on rollback